:bug: Update alignment property in user milestone component to use anchor-center

--- a/frontend/src/app/main/ui/ds/product/user_milestone.scss
+++ b/frontend/src/app/main/ui/ds/product/user_milestone.scss
@@ -56,7 +56,7 @@
   margin-left: 8px;
   transform: scale(0.8);
   color: var(--color-foreground-secondary);
-  align-self: baseline;
+  align-self: anchor-center;
 }
 
 .date {
